<resources>
    <string name="app_name">e-contact</string>
    <string name="mainActivity_name">Всі звернення</string>
    <string name="detailedActivity">CE-1257218</string>


    <string name="in_progress">в роботі</string>
    <string name="executed">виконано</string>
    <string name="waiting">очікує</string>


    <string name="action_settings">Settings</string>

    <string name="filter">Filter</string>

    <!-- DetailedActivity data -->
    <string name="index">Комунальне господарство</string>
    <string name="status">В роботі</string>
    <string name="created">Створено</string>
    <string name="registered">Зареєстровано</string>
    <string name="deadline">Вирішити до</string>
    <string name="responsible">Відповідальний</string>
    <string name="responsible_name">Дніпропетровський МВК</string>
    <string name="created_date">25 лютого 2016</string>
    <string name="registerd_date">26 лютого 2016</string>
    <string name="deadline_date">29 лютого 2016</string>
    <string name="photo">фото</string>
    <string name="description">Открытый люк (возле рекламного щита),
        район поворота 18 и 19 трамваев на проспект Мира с Донецкого шоссе</string>

    <!-- NavigationView -->
    <string name="econtact">e-contact</string>

    <string name="all_refs">Всі звернення</string>
    <string name="map_refs">Звернення на мапі</string>
    <string name="login">Увійти в аккаунт</string>

    <string name="subscript">Зроблено любов\'ю</string>
    <string name="poweredby">Зроблено любов\'ю\n<a href="http://itruh.dp.ua">IT Ruh Dnipro</a> and<a href="https://yalantis.com/">Yalantis</a></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="snackbar_text">Replace with your own action</string>
    <string name="snackbar_action">Action</string>

    <string name="robotomedium_path">fonts/roboto_medium.ttf</string>





</resources>
