<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gai.aleksej_gudkov.DetailedActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/index"
            style="@style/IndexStyle"
            android:text="@string/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/status"
                style="@style/StatusStyle"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/created"
                    style="@style/TextStyle"
                    android:text="@string/created"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="start"
                    />


                <TextView
                    android:id="@+id/created_date"
                    style="@style/TextValueStyle"
                    android:text="@string/created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/registered"
                    style="@style/TextStyle"
                    android:text="@string/registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="start"
                    />

                <TextView
                    android:id="@+id/registered_date"
                    style="@style/TextValueStyle"
                    android:text="@string/registerd_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="end"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deadline"
                    style="@style/TextStyle"
                    android:text="@string/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/deadline_date"
                    style="@style/TextValueStyle"
                    android:text="@string/deadline_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="end"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/responsible"
                    style="@style/TextStyle"
                    android:text="@string/responsible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/responsible_name"
                    style="@style/TextValueStyle"
                    android:text="@string/responsible_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:gravity="end"/>

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                style="@style/TextValueStyle"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>




</ScrollView>
